Created attachment 59294 [details] Example RTF file Bug 43965 fixed "\page" failing to cause a page feed, but now I'm seeing a page feed inserted for every line after the first page of many of my documents. No other RTF reader I have (Word, Nisus Writer, WriteNow, etc.) does this. An example file is attached. I've tested this only on MacOS PPC, not Intel anything.
Confirmed, will have a look soon.
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b58fc3dafc789aa55fff5ffef6ab83c3aa8b6e0 fdo#48104 fix RTF import of \page in inner groups
Fixed in master + added testcase, added to my -3-5 backport queue => closing. Thanks for the report!
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=5fa13451520a3e7e291611b47a151f770eaf3314&g=libreoffice-3-5 fdo#48104 fix RTF import of \page in inner groups It will be available in LibreOffice 3.5.3.