writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -280,7 +280,6 @@ RTFDocumentImpl::RTFDocumentImpl(uno::Reference<uno::XComponentContext> const& x
     m_bFormField(false),
     m_bWasInFrame(false),
     m_bIsInFrame(false),
-    m_bHasPage(false),
     m_aUnicodeBuffer(),
     m_aHexBuffer()
 {
@@ -424,7 +423,6 @@ void RTFDocumentImpl::checkNeedPap()
             {
                 dispatchSymbol(RTF_PAR);
                 m_bNeedPap = false;
-                m_aStates.top().aParagraphSprms.erase(NS_sprm::LN_PFPageBreakBefore);
             }
             Mapper().props(pParagraphProperties);
             if (hasBreakBeforeFrame)
@@ -1377,12 +1375,6 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
                 m_bWasInFrame = m_aStates.top().aFrame.inFrame();
                 if (!m_bWasInFrame)
                     m_bNeedPar = false;
-                if (m_bHasPage)
-                {
-                    // this has to be reset even without a pard, since it's a symbol in RTF terms
-                    m_aStates.top().aParagraphSprms.erase(NS_sprm::LN_PFPageBreakBefore);
-                    m_bHasPage = false;
-                }
             }
             break;
         case RTF_SECT:
@@ -1506,10 +1498,10 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
             break;
         case RTF_PAGE:
             {
-                RTFValue::Pointer_t pValue(new RTFValue(1));
-                dispatchSymbol(RTF_PAR);
-                m_aStates.top().aParagraphSprms->push_back(make_pair(NS_sprm::LN_PFPageBreakBefore, pValue));
-                m_bHasPage = true;
+                sal_uInt8 sBreak[] = { 0xc };
+                Mapper().text(sBreak, 1);
+                if (!m_bNeedPap)
+                    parBreak();
             }
             break;
         default:
@@ -1728,7 +1720,7 @@ int RTFDocumentImpl::dispatchFlag(RTFKeyword nKeyword)
         case RTF_KEEP: if (m_pCurrentBuffer != &m_aTableBuffer) nParam = NS_sprm::LN_PFKeep; break;
         case RTF_KEEPN: if (m_pCurrentBuffer != &m_aTableBuffer) nParam = NS_sprm::LN_PFKeepFollow; break;
         case RTF_INTBL: m_pCurrentBuffer = &m_aTableBuffer; nParam = NS_sprm::LN_PFInTable; break;
-        case RTF_PAGEBB: nParam = NS_sprm::LN_PFPageBreakBefore; m_bHasPage = false; break;
+        case RTF_PAGEBB: nParam = NS_sprm::LN_PFPageBreakBefore; break;
         default: break;
     }
     if (nParam >= 0)
